fix(ui): align bottom panel list with control buttons

--- a/app/app.scss
+++ b/app/app.scss
@@ -97,7 +97,7 @@ $spacing-m: 16;
 $spacing-l: 24;
 $spacing-xl: 32;
 $spacing-xxl: 48;
-$spacing-panel: 10;
+$spacing-panel: 15;
 $spacing-item: 56;
 $spacing-item-big: 82;
 
